2008-11-24	Joel Sherrill <joel.sherrill@OARcorp.com>

	PR 1341/cpukit
	* sapi/include/confdefs.h: The following macros were missing
	the _Configure_From_workspace() wrapper on their size estimate:
	  + CONFIGURE_INTERRUPT_STACK_MEMORY
	  + CONFIGURE_MEMORY_PER_TASK_FOR_CLASSIC_API
	  + CONFIGURE_INTERRUPT_VECTOR_TABLE
	  + CONFIGURE_MEMORY_FOR_STATIC_EXTENSIONS
	In addition, there was a duplicate definition of
	CONFIGURE_MEMORY_PER_TASK_FOR_CLASSIC_API.

2008-11-20	Joel Sherrill <joel.sherrill@OARcorp.com>

	PR 1340/cpukit
	* sapi/inline/rtems/chain.inl: Add rtems_chain_initialize to public
	chain API.

2008-11-13	Joel Sherrill <joel.sherrill@OARcorp.com>

	PR 1336/cpukit
	* sapi/inline/rtems/chain.inl: Add rtems_chain_prepend_unprotected and
	rtems_chain_append_unprotected.

2008-11-03	Joel Sherrill <joel.sherrill@OARcorp.com>

	PR 1333/cpukit
	* libcsupport/include/rtems/termiostypes.h: Typo on type name -- should
	be rtems_device_minor_number.

2008-10-15	Joel Sherrill <joel.sherrill@OARcorp.com>

	PR 1331/networking
	* libmisc/shell/shell.c, telnetd/check_passwd.c, telnetd/telnetd.c,
	telnetd/telnetd.h: Improve comments and explanation of options to
	rtems_telnetd_initialize. Add extra newline to login sequence from
	shell.

2008-10-14	Tim Cussins <timcussins@eml.cc>

	PR 1330/cpukit
	* libcsupport/src/free.c: Should print begin field not start field.

2008-10-02	Thomas Doerfler <Thomas.Doerfler@embedded-brains.de>

	* score/cpu/powerpc/rtems/score/cpu.h: adapt timebase macros to
	support MPC8xx again

2008-10-01	Gene Smith <gene.smith@siemens.com>

	PR 1328/cpukit
	* libmisc/shell/main_mdump.c, libmisc/shell/main_mwdump.c: Fix printing
	of more than 256 bytes.

2008-09-26	Joel Sherrill <joel.sherrill@OARcorp.com>

	PR 1316/cpukit
	* score/src/coremsgbroadcast.c: Give error when message is too large
	like when sending a message. This was the documented behavior.

2008-09-25	Eric Norum <norume@aps.anl.gov>
