@@ -25,6 +25,7 @@
 #include <inttypes.h>
 #include <sys/types.h>
 #include <unistd.h>
+#define __need_getopt_newlib
 #include <getopt.h>
 
 #include <rtems.h>
